--- a/beacon-chain/Dockerfile
+++ b/beacon-chain/Dockerfile
@@ -3,15 +3,16 @@ FROM sigp/lighthouse:${UPSTREAM_VERSION}-modern
 
 ARG NETWORK
 ARG STAKER_SCRIPTS_VERSION
+ARG DATA_DIR
 
-COPY jwtsecret.hex /jwtsecret
-COPY entrypoint.sh /usr/local/bin/entrypoint.sh
-
-ENV JWT_SECRET_FILE=/jwtsecret \
-    DATA_DIR=/root/.lighthouse \
+ENV JWT_FILE_PATH=/jwtsecret \
+    DATA_DIR=${DATA_DIR} \
     BEACON_API_PORT=3500 \
     NETWORK=${NETWORK} \
     STAKER_SCRIPTS_URL=https://github.com/dappnode/staker-package-scripts/releases/download/${STAKER_SCRIPTS_VERSION}
+
+COPY jwtsecret.hex ${JWT_FILE_PATH}
+COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 
 ADD ${STAKER_SCRIPTS_URL}/consensus_tools.sh /etc/profile.d/
 
