--- a/validator/Dockerfile
+++ b/validator/Dockerfile
@@ -11,13 +11,15 @@ COPY entrypoint.sh /usr/local/bin
 
 ENV VALIDATOR_PORT=3500 \
     DATA_DIR=${DATA_DIR} \
-    NETWORK=${NETWORK} \
     STAKER_SCRIPTS_URL=https://github.com/dappnode/staker-package-scripts/releases/download/${STAKER_SCRIPTS_VERSION}
 
 ADD ${STAKER_SCRIPTS_URL}/consensus_tools.sh /etc/profile.d/
 
-RUN chmod +rx /usr/local/bin/entrypoint.sh /etc/profile.d/consensus_tools.sh
+RUN apt-get update && apt-get --yes install curl && apt-get clean && \
+    chmod +rx /usr/local/bin/entrypoint.sh /etc/profile.d/consensus_tools.sh
 
-RUN apt-get update && apt-get install curl --yes && apt-get clean
+# This env changes the variant
+# Placed at the end to regenerate the least amount of layers
+ENV NETWORK=${NETWORK}
 
 ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
