--- a/beacon-chain/Dockerfile
+++ b/beacon-chain/Dockerfile
@@ -6,13 +6,12 @@ ARG STAKER_SCRIPTS_VERSION
 ARG DATA_DIR
 ARG P2P_PORT
 
-ENV JWT_FILE_PATH=/jwtsecret \
+ENV JWT_FILE_PATH=/jwtsecret.hex \
     DATA_DIR=${DATA_DIR} \
     BEACON_API_PORT=3500 \
     P2P_PORT=${P2P_PORT} \
     STAKER_SCRIPTS_URL=https://github.com/dappnode/staker-package-scripts/releases/download/${STAKER_SCRIPTS_VERSION}
 
-COPY jwtsecret.hex ${JWT_FILE_PATH}
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 
 ADD ${STAKER_SCRIPTS_URL}/consensus_tools.sh /etc/profile.d/
