Remove execution global envs

--- a/package_variants/gnosis/dappnode_package.json
+++ b/package_variants/gnosis/dappnode_package.json
@@ -9,12 +9,8 @@
   },
   "globalEnvs": [
     {
-      "envs": ["EXECUTION_CLIENT_GNOSIS", "MEVBOOST_GNOSIS"],
-      "services": ["beacon-chain"]
-    },
-    {
       "envs": ["MEVBOOST_GNOSIS"],
-      "services": ["validator"]
+      "services": ["validator", "beacon-chain"]
     }
   ]
 }
