--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -1,8 +1,8 @@
 {
   "upstream": [
     {
-      "repo": "ChainSafe/lodestar",
-      "version": "v1.19.0",
+      "repo": "sigp/lighthouse",
+      "version": "v5.3.0",
       "arg": "UPSTREAM_VERSION"
     },
     {
