--- a/package_variants/gnosis/dappnode_package.json
+++ b/package_variants/gnosis/dappnode_package.json
@@ -12,5 +12,9 @@
       "envs": ["MEVBOOST_GNOSIS"],
       "services": ["validator", "beacon-chain"]
     }
-  ]
+  ],
+  "optionalDependencies": {
+    "nethermind-xdai.dnp.dappnode.eth": ">=1.0.47",
+    "gnosis-erigon.dnp.dappnode.eth": ">=0.1.2"
+  }
 }
