remove deprecated -modern tag

--- a/beacon-chain/Dockerfile
+++ b/beacon-chain/Dockerfile
@@ -1,5 +1,5 @@
 ARG UPSTREAM_VERSION
-FROM sigp/lighthouse:${UPSTREAM_VERSION}-modern
+FROM sigp/lighthouse:${UPSTREAM_VERSION}
 
 ARG NETWORK
 ARG STAKER_SCRIPTS_VERSION
