--- a/package_variants/holesky/dappnode_package.json
+++ b/package_variants/holesky/dappnode_package.json
@@ -1,6 +1,6 @@
 {
   "name": "lighthouse-holesky.dnp.dappnode.eth",
-  "version": "0.1.3",
+  "version": "0.1.6",
   "links": {
     "ui": "http://brain.web3signer-holesky.dappnode",
     "homepage": "https://github.com/dappnode/DAppNodePackage-lighthouse-generic#readme",
@@ -9,8 +9,13 @@
   },
   "globalEnvs": [
     {
-      "envs": ["MEVBOOST_HOLESKY"],
-      "services": ["validator", "beacon-chain"]
+      "envs": [
+        "MEVBOOST_HOLESKY"
+      ],
+      "services": [
+        "validator",
+        "beacon-chain"
+      ]
     }
   ]
 }
