--- a/package_variants/holesky/dappnode_package.json
+++ b/package_variants/holesky/dappnode_package.json
@@ -1,4 +1,11 @@
 {
+  "upstream": [
+    {
+      "repo": "sigp/lighthouse",
+      "version": "v7.0.0-beta.0",
+      "arg": "UPSTREAM_VERSION"
+    }
+  ],
   "name": "lighthouse-holesky.dnp.dappnode.eth",
   "version": "0.1.6",
   "links": {
