--- a/package_variants/holesky/docker-compose.yml
+++ b/package_variants/holesky/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build:
       context: beacon-chain
       args:
+        UPSTREAM_VERSION: v7.0.0-beta.0 ## To be removed once Pectra is live. v7.0.0-beta.0 is a holesky-only release
         NETWORK: holesky 
         P2P_PORT: 9604
     ports:
@@ -15,3 +16,4 @@ services:
     build:
       args:
         NETWORK: holesky
+        UPSTREAM_VERSION: v7.0.0-beta.0  ## To be removed once Pectra is live. v7.0.0-beta.0 is a holesky-only release
