--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -2,7 +2,7 @@
   "upstream": [
     {
       "repo": "sigp/lighthouse",
-      "version": "v6.0.1",
+      "version": "v7.0.0-beta.0",
       "arg": "UPSTREAM_VERSION"
     },
     {
