--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -11,7 +11,7 @@
       "arg": "STAKER_SCRIPTS_VERSION"
     }
   ],
-  "architectures": ["linux/amd64", "linux/arm64"],
+  "architectures": ["linux/amd64"],
   "shortDescription": "Lighthouse ETH2.0 Beacon chain + validator",
   "description": "Lighthouse is an Ethereum 2.0 client that connects to other Ethereum 2.0 clients to form a resilient and decentralized proof-of-stake blockchain.",
   "type": "service",
