--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: beacon-chain
       args:
         UPSTREAM_VERSION: v6.0.1
-        STAKER_SCRIPTS_VERSION: 0.1.2
+        STAKER_SCRIPTS_VERSION: v0.1.2
         BEACON_API_PORT: 3500
         DATA_DIR: /root/.lighthouse
     volumes:
@@ -23,7 +23,7 @@ services:
       context: validator
       args:
         UPSTREAM_VERSION: v6.0.1
-        STAKER_SCRIPTS_VERSION: 0.1.2
+        STAKER_SCRIPTS_VERSION: v0.1.2
         DATA_DIR: /root/.lighthouse
     restart: unless-stopped
     security_opt:
