--- a/package_variants/hoodi/dappnode_package.json
+++ b/package_variants/hoodi/dappnode_package.json
@@ -2,7 +2,7 @@
   "upstream": [
     {
       "repo": "sigp/lighthouse",
-      "version": "v7.0.0-beta.5",
+      "version": "v7.0.0",
       "arg": "UPSTREAM_VERSION"
     }
   ],
