--- a/package_variants/holesky/holesky-notifications.yaml
+++ b/package_variants/holesky/holesky-notifications.yaml
@@ -2,7 +2,7 @@ endpoints:
   - name: "Holesky Lighthouse Node Syncing Check"
     enabled: true
     group: "holesky"
-    url: "http://lighthouse-holesky.dappnode:3500/eth/v1/node/syncing"
+    url: "http://beacon-chain.lighthouse-holesky.dappnode:3500/eth/v1/node/syncing"
     method: "GET"
     headers:
       Content-Type: "application/json"
@@ -26,7 +26,7 @@ endpoints:
   - name: "Holesky Lighthouse Node Peers Count Check"
     enabled: true
     group: "holesky"
-    url: "http://lighthouse-holesky.dappnode:3500/eth/v1/node/peer_count"
+    url: "http://beacon-chain.lighthouse-holesky.dappnode:3500/eth/v1/node/peer_count"
     method: "GET"
     headers:
       Content-Type: "application/json"
