--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -12,7 +12,7 @@
     }
   ],
   "architectures": ["linux/amd64"],
-  "shortDescription": "Lighthouse ETH2.0 Beacon chain + validator",
+  "shortDescription": "Lighthouse Consensus Client + Validator Client",
   "description": "Lighthouse is an Ethereum 2.0 client that connects to other Ethereum 2.0 clients to form a resilient and decentralized proof-of-stake blockchain.",
   "type": "service",
   "author": "DAppNode Association <admin@dappnode.io> (https://github.com/dappnode)",
