--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -13,7 +13,7 @@
   ],
   "architectures": ["linux/amd64"],
   "shortDescription": "Lighthouse Consensus Client + Validator Client",
-  "description": "Lighthouse is an Ethereum 2.0 client that connects to other Ethereum 2.0 clients to form a resilient and decentralized proof-of-stake blockchain.",
+  "description": "Lighthouse is an Ethereum consensus client based in Rust and developed by [Sigma Prime](https://github.com/sigp/).",
   "type": "service",
   "author": "DAppNode Association <admin@dappnode.io> (https://github.com/dappnode)",
   "contributors": [
