--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -11,7 +11,7 @@
       "arg": "STAKER_SCRIPTS_VERSION"
     }
   ],
-  "architectures": ["linux/amd64"],
+  "architectures": ["linux/amd64", "linux/arm64"],
   "shortDescription": "Lighthouse Consensus Client + Validator Client",
   "description": "Lighthouse is an Ethereum consensus client based in Rust and developed by [Sigma Prime](https://github.com/sigp/).",
   "type": "service",
