--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,12 +29,12 @@ jobs:
 
   release:
     name: Release
-    runs-on: ubuntu-latest
+    runs-on: ipfs-dev-gateway
     if: github.event_name == 'push'
     steps:
       - uses: actions/checkout@v3
       - name: Publish
-        run: npx @dappnode/dappnodesdk publish patch --dappnode_team_preset --all-variants
+        run: npx @dappnode/dappnodesdk publish patch --github_release --timeout 1h --content_provider=http://10.200.200.7:5001 --eth_provider=https://web3.dappnode.net --all-variants
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEVELOPER_ADDRESS: "0xf35960302a07022aba880dffaec2fdd64d5bf1c1"
